# pico-scoreboard

./: .gitignore  ARCHITECTURE.md  SETUP.md  pico-scoreboard.code-workspace
backend/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
backend/config/: default.toml  local.toml.example
backend/src/: auth.rs  clock.rs  config.rs  error.rs  main.rs  sport.rs
backend/src/basketball/: handler.rs  mod.rs  transform.rs  types.rs
backend/src/espn/: client.rs  mod.rs  types.rs
backend/src/football/: handler.rs  transform.rs  types.rs
backend/src/game/: handler.rs  mod.rs  transform.rs  types.rs
backend/src/mock/: generator.rs  handler.rs  mod.rs  teams.rs
backend/src/mock/simulation/: drives.rs  engine.rs  mod.rs  options.rs  plays.rs  repository.rs  state.rs
backend/src/shared/: transform.rs  types.rs
backend/src/team/: handler.rs  image.rs  mod.rs  types.rs
firmware/src/: _main.py  main.py  main_diagnostic.py  main_different.py  test_json_types.py
firmware/src/lib/: animations.py  api.py  api_poller.py  color.py  display_loop.py  display_thread.py  dns.py  http_client.py  pio_types.pyi  rotary_encoder.py  veml7700.py
firmware/src/scoreboard/: __init__.py  api_client.py  api_poller.py  api_routes.py  brightness.py  config.py  display.py  dns.py  hmac.py  models.py  state.py
frontend/: components.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: utils.ts
frontend/src/routes/: +layout.svelte  (+1 more)
tools/: build.cmd  build.py  generate_wifi_qr.py
tools/sprites/: ball.aseprite  build.py  field.aseprite
(+42 files in other folders)
